--- a/pages/index.html
+++ b/pages/index.html
@@ -20,3 +20,27 @@
         </div>
 	</header>
 </body>
+<main>
+    <div class="task-form">
+        <div class="form-group">
+            <label for="taskTitle">Title</label>
+            <input type="text" id="taskTitle" placeholder="Enter a title (no more than 30 characters)" maxlength="30">
+        </div>
+        <div class="form-group">
+            <label for="taskDescription">Description</label>
+            <textarea id="taskDescription" placeholder="Enter a description (no more than 50 characters)" maxlength="50"></textarea>
+        </div>
+        <div class="date-input">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                <line x1="16" y1="2" x2="16" y2="6"></line>
+                <line x1="8" y1="2" x2="8" y2="6"></line>
+                <line x1="3" y1="10" x2="21" y2="10"></line>
+            </svg>
+            <input type="date" id="taskDueDate">
+            <!--toca implementar addTask por js-->
+            <button onclick="addTask()">Add</button>
+        </div>
+    </div>
+</main>
+</html>
