Conexion del front con el back

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,6 +43,10 @@
             <button onclick="addTask()">Add</button>
         </div>
     </div>
+    <div id="task-container">
+        <div class="task"></div>
+    </div>
 </main>
+<script src="../scripts/script.js"></script>
 </body>
 </html>
