--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="iso-utf-8" />
 	<link rel="stylesheet" href="../styles/home.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<script type="text/javascript" src="../jquery-3.0.0.min.js"></script>
 	<title>TaskManager</title>
 </head>
